pkg/ibmvpc/examples/out/explain_out/NACLQueryConnection1_all_vpcs_explain_detail.txt
Explaining connectivity from vsi1-ky to 161.26.0.0/16 within test-vpc1-ky using "protocol: UDP"
Interpreted source: vsi1-ky[10.240.10.4]
Interpreted destination: 161.26.0.0/16 (external)
===============================================================================================

Connections are allowed from vsi1-ky[10.240.10.4] to Public Internet 161.26.0.0/16 using "protocol: UDP"

Path:
	vsi1-ky[10.240.10.4] -> security group sg1-ky -> network ACL acl1-ky -> subnet1-ky -> 
	PublicGateway public-gw-ky -> 
	Public Internet 161.26.0.0/16


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group sg1-ky allows connection with the following allow rules
			index: 0, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl1-ky allows connection with the following allow rules
			index: 1, direction: outbound , src: 10.240.10.0/24 , dst: 161.26.0.0/16, conn: protocol: udp, srcPorts: 1-65535, dstPorts: 1-65535, action: allow

------------------------------------------------------------------------------------------------------------------------
